apps/20-media/sabnzbd/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  template:
    spec:
      containers:
        - name: sabnzbd
        - name: HOST_WHITELIST_ENTRIES
          value: sabnzbd.staging.truxonline.com,sabnzbd,sabnzbd.media,sabnzbd.media.svc.cluster.local
        - name: SABNZBD_HOST
          value: sabnzbd.staging.truxonline.com
